toolchain/internal/core/analysis/testdata/errors/naming/proc_field_not_camel.vdl
// fmt:off
// @expect: E102

rpc Users {
	proc GetUser {
		input {
			UserId: string
		}
		output {
			UserName: string
		}
	}
}
